--- a/src/content/pages/about.html
+++ b/src/content/pages/about.html
@@ -1,7 +1,7 @@
 ---
 title: 'About'
 description: 'Meta description for the page'
-preloadImg: '/assets/images/cabinets2.jpg'
+preloadImg: '/assets/images/pexels-kelly-1179532-23848564.jpg'
 permalink: 'about/'
 eleventyNavigation:
     key: About
@@ -29,11 +29,11 @@ eleventyNavigation:
             <source media="(max-width: 600px)" srcset="">
             <!--Tablet and above Image-->
             <source media="(min-width: 601px)" srcset="/assets/images/pexels-kelly-1179532-23848564.jpg">
-            <img loading="lazy" decoding="async" src="/assets/images/pexels-kelly-1179532-23848564.jpg" alt="yoga" width="1280" height="568">
+            <img loading="lazy" decoding="async" src="/assets/images/pexels-kelly-1179532-23848564.jpg" alt="two rivers" width="1280" height="568">
         </picture>
         <!--Change the svg path fill color to whatever color the section below is so you can match it and create the illusion it is all one piece-->
         <svg class="cs-wave" width="1920" height="179" viewBox="0 0 1920 179" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd" clip-rule="evenodd" d="M1920 179V91.3463C1835.33 91.3463 1715.47 76.615 1549.2 32.9521C1299.48 -32.3214 1132.77 12.1006 947.32 61.5167C810.762 97.9044 664.042 137 466.533 137C331.607 137 256.468 123.447 188.082 111.113C130.974 100.812 78.5746 91.3609 0 91.3609V179H1920Z" fill="white"/>
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M1920 179V91.3463C1835.33 91.3463 1715.47 76.615 1549.2 32.9521C1299.48 -32.3214 1132.77 12.1006 947.32 61.5167C810.762 97.9044 664.042 137 466.533 137C331.607 137 256.468 123.447 188.082 111.113C130.974 100.812 78.5746 91.3609 0 91.3609V179H1920Z" fill="#F8FCFF"/>
         </svg>
     </div>
 
@@ -47,7 +47,7 @@ eleventyNavigation:
                 <picture class="cs-picture">
                     <source media="(max-width: 600px)" srcset="/assets/images/Untitled-2.jpg">
                     <source media="(min-width: 601px)" srcset="/assets/images/Untitled-2 copy.jpg">
-                    <img loading="lazy" decoding="async" src="/assets/images/Untitled-2 copy.jpg" alt="Liam Straebler Headshot" width="500" height="552" aria-hidden="true">
+                    <img loading="lazy" decoding="async" src="/assets/images/Untitled-2 copy.jpg" alt="Liam S. Headshot" width="500" height="552" aria-hidden="true">
                 </picture>
             </div>
             <div class="cs-content">
@@ -56,7 +56,66 @@ eleventyNavigation:
                 <p class="cs-text">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc massa ut sed odio cursus. Malesuada scelerisque eget eu, sollicitudin tellus nibh aenean enim sed. Ut vitae eget commodo consectetur felis augue. Condimentum pellentesque sed aliquet leo in potenti libero.
                 </p>
-                <a class="cs-button-solid" aria-label="learn more about our programs" href="">Reach Out</a>
+                <a class="cs-button-solid" aria-label="learn more about our programs" href="/contact">Reach Out</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- ============================================ -->
+    <!--                Side By Side                  -->
+    <!-- ============================================ -->
+
+    <section id="sbs-1073">
+        <div class="cs-container">
+            <div class="cs-image-group">
+                <!--Top left image-->
+                <picture class="cs-picture cs-picture1">
+                    <!--Mobile Image-->
+                    <source media="(max-width: 600px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/mechanic4.jpg">
+                    <!--Tablet and above Image-->
+                    <source media="(min-width: 601px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/mechanic4.jpg">
+                    <img loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/mechanic4.jpg" alt="mechanic" width="217" height="440">
+                </picture>
+                <!--Middle image-->
+                <picture class="cs-picture cs-picture2">
+                    <!--Mobile Image-->
+                    <source media="(max-width: 600px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/mechanic5.jpg">
+                    <!--Tablet and above Image-->
+                    <source media="(min-width: 601px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/mechanic5.jpg">
+                    <img loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/mechanic5.jpg" alt="mechanic" width="305" height="600">
+                </picture>
+                <!--Bottom right image-->
+                <picture class="cs-picture cs-picture3">
+                    <!--Mobile Image-->
+                    <source media="(max-width: 600px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/mechanic6.jpg">
+                    <!--Tablet and above Image-->
+                    <source media="(min-width: 601px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/mechanic6.jpg">
+                    <img loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/mechanic6.jpg" alt="mechanic" width="216" height="440">
+                </picture>
+                <!--Stripe background-->
+                <img class="cs-stripes" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/stripes.svg" alt="stripes" width="509" height="535" aria-hidden="true">
+            </div>
+            <div class="cs-content">
+                <h2 class="cs-title">Combining Passion With Expertise</h2>
+                <p class="cs-text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci possimus accusantium quod voluptatum mollitia unde pariatur nam ipsum provident blanditiis.
+                </p>
+                <ul class="cs-list">
+                    <li class="cs-li">Unbeatable Customer Service</li>
+                    <li class="cs-li">No Limitations On Design</li>
+                    <li class="cs-li">100% Attention And Effort On All Projects</li>
+                    <li class="cs-li">Quick And Affordable</li>
+                    <li class="cs-li">Unique Content</li>
+                </ul>
+                <a class="cs-link" href="tel:555-555-0234">
+                    <picture class="cs-wrapper">
+                        <img class="cs-icon" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/white-phone.svg" alt="icon" width="24" height="24">
+                    </picture>
+                    <div class="cs-info">
+                        <span class="cs-header">Call Anytime</span>
+                        <span class="cs-link-content">(845) 754 6086</span>
+                    </div>
+                </a>
             </div>
         </div>
     </section>
