--- a/src/index.html
+++ b/src/index.html
@@ -47,12 +47,12 @@ eleventyNavigation:
                 <p class="cs-text">
                     Tincidunt lobortis feugiat vivamus at augue eget arcu dictum varius. Nibh tortor id aliquet lectus proin nibh condimentum.
                 </p>
-                <a href="" class="cs-button-solid">Explore More</a>
+                <a href="/about" class="cs-button-solid">Explore More</a>
             </div>
             <!--Service Cards-->
             <ul class="cs-card-group">
                 <li class="cs-item">
-                    <a class="cs-link" href="">
+                    <a class="cs-link" href="/services">
                         <span class="cs-number">01</span>
                         <h2 class="cs-h2">Mobile-First Design</h2>
                         <p class="cs-item-text">
@@ -61,7 +61,7 @@ eleventyNavigation:
                     </a>
                 </li>
                 <li class="cs-item">
-                    <a class="cs-link" href="">
+                    <a class="cs-link" href="/services">
                         <span class="cs-number">02</span>
                         <h2 class="cs-h2">Fully Optimized</h2>
                         <p class="cs-item-text">
@@ -70,7 +70,7 @@ eleventyNavigation:
                     </a>
                 </li>
                 <li class="cs-item">
-                    <a class="cs-link" href="">
+                    <a class="cs-link" href="/services">
                         <span class="cs-number">03</span>
                         <h2 class="cs-h2">Growth Oriented</h2>
                         <p class="cs-item-text">
@@ -85,7 +85,7 @@ eleventyNavigation:
         <picture class="cs-picture">
             <source media="(max-width: 600px)" srcset="/assets/images/pexels-blitzboy-1144176.jpg">
             <source media="(min-width: 601px)" srcset="/assets/images/pexels-blitzboy-1144176.jpg">
-            <img decoding="async" src="/assets/images/pexels-blitzboy-1144176.jpg" alt="mountains" width="2250" height="1500" aria-hidden="true">
+            <img decoding="async" src="/assets/images/pexels-blitzboy-1144176.jpg" alt="Two Rivers" width="2250" height="1500" aria-hidden="true">
         </picture>
     </section>
 
@@ -102,7 +102,7 @@ eleventyNavigation:
                     <source media="(max-width: 600px)" srcset="/assets/images/macbook-mockup.png">
                     <!--Tablet and above Image-->
                     <source media="(min-width: 601px)" srcset="/assets/images/macbook-mockup.png">
-                    <img loading="lazy" decoding="async" src="/assets/images/macbook-mockup.png" alt="mechanic" width="366" height="317">
+                    <img loading="lazy" decoding="async" src="/assets/images/macbook-mockup.png" alt="Device mockups" width="366" height="317">
                 </picture>
                 <!--Top Right image-->
             </div>
@@ -112,7 +112,7 @@ eleventyNavigation:
                 <p class="cs-text">
                     Dive into the exhilarating world of fishing with Gill Rush, a dynamic and electrifying apparel brand designed exclusively for those who live for the rush of the catch. For avid anglers who feel the pulse quicken at the mere tug on their line, Gill Rush captures the essence of that heart-pounding moment when fish and fisherman lock in a fierce dance of skill and strategy.
                 </p>
-                <a href="" class="cs-button-solid">Learn More</a>
+                <a href="/about" class="cs-button-solid">Learn More</a>
             </div>
         </div>
     </section>
@@ -212,7 +212,7 @@ eleventyNavigation:
                     </div>
                 </li>
             </ul>
-            <a href="" class="cs-button-solid">Contact Us</a>
+            <a href="/contact" class="cs-button-solid">Contact Us</a>
             <!--Floating Arrow Graphic-->
             <img class="cs-floater" src="/assets/svgs/down-curved-arrow-svgrepo-com.svg" alt="arrow" loading="lazy" decoding="async" aria-hidden="true">
         </div>
@@ -246,27 +246,27 @@ eleventyNavigation:
                     <span class="cs-included">Package Includes</span>
                     <ul class="cs-ul">
                         <li class="cs-li">
-                            <img class="cs-li-img" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Pricing/check-blue.svg" alt="code stitch icon" width="20" height="20">
+                            <img class="cs-li-img" aria-hidden="true" loading="lazy" decoding="async" src="\assets\svgs\check-svgrepo-com.svg" alt="check icon" width="20" height="20">
                             Fully Optimized Custom Website
                         </li>
                         <li class="cs-li">
-                            <img class="cs-li-img" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Pricing/check-blue.svg" alt="code stitch icon" width="20" height="20">
+                            <img class="cs-li-img" aria-hidden="true" loading="lazy" decoding="async" src="\assets\svgs\check-svgrepo-com.svg" alt="check icon" width="20" height="20">
                             Hosting Included
                         </li>
                         <li class="cs-li">
-                            <img class="cs-li-img" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Pricing/check-blue.svg" alt="code stitch icon" width="20" height="20">
+                            <img class="cs-li-img" aria-hidden="true" loading="lazy" decoding="async" src="\assets\svgs\check-svgrepo-com.svg" alt="check icon" width="20" height="20">
                             5 Pages
                         </li>
                         <li class="cs-li">
-                            <img class="cs-li-img" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Pricing/check-blue.svg" alt="code stitch icon" width="20" height="20">
+                            <img class="cs-li-img" aria-hidden="true" loading="lazy" decoding="async" src="\assets\svgs\check-svgrepo-com.svg" alt="check icon" width="20" height="20">
                             Lifetime Maintenance
                         </li>
                         <li class="cs-li cs-disabled">
-                            <img class="cs-li-img" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Pricing/check-blue.svg" alt="code stitch icon" width="20" height="20">
+                            <img class="cs-li-img" aria-hidden="true" loading="lazy" decoding="async" src="\assets\svgs\check-svgrepo-com.svg" alt="check icon" width="20" height="20">
                             Unlimited Edits
                         </li>
                     </ul>
-                    <a href="/basic.html" class="cs-button-solid">Get Started</a>
+                    <a href="/contact" class="cs-button-solid">Get Started</a>
                 </li>
                 <!-- Option 2 -->
                 <li class="cs-item cs-popular">
@@ -281,27 +281,27 @@ eleventyNavigation:
                     <span class="cs-included">Package Includes</span>
                     <ul class="cs-ul">
                         <li class="cs-li">
-                            <img class="cs-li-img" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Pricing/check-blue.svg" alt="code stitch icon" width="20" height="20">
+                            <img class="cs-li-img" aria-hidden="true" loading="lazy" decoding="async" src="\assets\svgs\check-svgrepo-com.svg" alt="check icon" width="20" height="20">
                             Fully Optimized Custom Website
                         </li>
                         <li class="cs-li">
-                            <img class="cs-li-img" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Pricing/check-blue.svg" alt="code stitch icon" width="20" height="20">
+                            <img class="cs-li-img" aria-hidden="true" loading="lazy" decoding="async" src="\assets\svgs\check-svgrepo-com.svg" alt="check icon" width="20" height="20">
                             Unlimited Edits
                         </li>
                         <li class="cs-li">
-                            <img class="cs-li-img" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Pricing/check-blue.svg" alt="code stitch icon" width="20" height="20">
+                            <img class="cs-li-img" aria-hidden="true" loading="lazy" decoding="async" src="\assets\svgs\check-svgrepo-com.svg" alt="check icon" width="20" height="20">
                             5 Pages
                         </li>
                         <li class="cs-li">
-                            <img class="cs-li-img" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Pricing/check-blue.svg" alt="code stitch icon" width="20" height="20">
+                            <img class="cs-li-img" aria-hidden="true" loading="lazy" decoding="async" src="\assets\svgs\check-svgrepo-com.svg" alt="check icon" width="20" height="20">
                             Hosting Included
                         </li>
                         <li class="cs-li">
-                            <img class="cs-li-img" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Pricing/check-blue.svg" alt="code stitch icon" width="20" height="20">
+                            <img class="cs-li-img" aria-hidden="true" loading="lazy" decoding="async" src="\assets\svgs\check-svgrepo-com.svg" alt="check icon" width="20" height="20">
                             Lifetime Maintenance
                         </li>
                     </ul>
-                    <a href="/basic.html" class="cs-button-solid">Get Started</a>
+                    <a href="/contact" class="cs-button-solid">Get Started</a>
                 </li>
                 <!-- Option 3 -->
                 <li class="cs-item">
@@ -315,27 +315,27 @@ eleventyNavigation:
                     <span class="cs-included">Package Includes</span>
                     <ul class="cs-ul">
                         <li class="cs-li">
-                            <img class="cs-li-img" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Pricing/check-blue.svg" alt="code stitch icon" width="20" height="20">
+                            <img class="cs-li-img" aria-hidden="true" loading="lazy" decoding="async" src="\assets\svgs\check-svgrepo-com.svg" alt="check icon" width="20" height="20">
                             Added Features
                         </li>
                         <li class="cs-li">
-                            <img class="cs-li-img" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Pricing/check-blue.svg" alt="code stitch icon" width="20" height="20">
+                            <img class="cs-li-img" aria-hidden="true" loading="lazy" decoding="async" src="\assets\svgs\check-svgrepo-com.svg" alt="check icon" width="20" height="20">
                             SEO Upgrades
                         </li>
                         <li class="cs-li">
-                            <img class="cs-li-img" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Pricing/check-blue.svg" alt="code stitch icon" width="20" height="20">
+                            <img class="cs-li-img" aria-hidden="true" loading="lazy" decoding="async" src="\assets\svgs\check-svgrepo-com.svg" alt="check icon" width="20" height="20">
                             Design Changes
                         </li>
                         <li class="cs-li">
-                            <img class="cs-li-img" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Pricing/check-blue.svg" alt="code stitch icon" width="20" height="20">
+                            <img class="cs-li-img" aria-hidden="true" loading="lazy" decoding="async" src="\assets\svgs\check-svgrepo-com.svg" alt="check icon" width="20" height="20">
                             Additional Pages
                         </li>
                         <li class="cs-li">
-                            <img class="cs-li-img" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Pricing/check-blue.svg" alt="code stitch icon" width="20" height="20">
+                            <img class="cs-li-img" aria-hidden="true" loading="lazy" decoding="async" src="\assets\svgs\check-svgrepo-com.svg" alt="check icon" width="20" height="20">
                             1 Hour Minimum
                         </li>
                     </ul>
-                    <a href="/basic.html" class="cs-button-solid">Get Started</a>
+                    <a href="/contact" class="cs-button-solid">Get Started</a>
                 </li>
             </ul>
         </div>
@@ -354,7 +354,7 @@ eleventyNavigation:
                 <p class="cs-text">
                     SUB-G Brazilian Jiu-Jitsu is a local martial arts gym in Port Jervis, NY that opened its doors in 2021. We made their first website and continue to work with them.
                 </p>
-                <a href="" class="cs-button-solid">Visit SUB-G BJJ</a>
+                <a href="https://newer-main--sub-g-bjj.netlify.app/" class="cs-button-solid">Visit SUB-G BJJ</a>
             </div>
             <div class="cs-gallery">
                 <picture class="cs-picture">
@@ -391,7 +391,7 @@ eleventyNavigation:
                     <p class="cs-text">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquet commodo, proin diam erat. Quis lectus faucibus ac velit consectetur nunc, lorem. Nibh eu fermentum, nullam cursus tortor augue at. 
                     </p>
-                    <a href="" class="cs-button-solid">Contact Us</a>
+                    <a href="/contact" class="cs-button-solid">Contact Us</a>
                 </div>
             </div>
             <!-- Right Section -->
