--- a/src/content/pages/reviews.html
+++ b/src/content/pages/reviews.html
@@ -4,8 +4,8 @@ description: 'Meta description for the page'
 preloadImg: '/assets/images/cabinets2.jpg'
 permalink: 'portfolio/'
 eleventyNavigation:
-    key: Portfolio
-    order: 400
+    <!-- key: Portfolio
+    order: 400 -->
 ---
 
 {% extends "layouts/base.html" %}
